test_scores/negative_dimers/features/Q12834.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q12834.pkl.xz